WIP 1.21.1 port (but it works well)